--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "dependencies": {
         "cache": "^2.1.0",
         "clear": "^0.1.0",
+        "gulp-less": "^4.0.1",
         "gulp-stylus": "^2.6.0",
         "gulp.spritesmith": "^6.3.0",
-        "npm-check-updates": "^2.15.0"
+        "npm-check-updates": "^2.15.0",
+        "path": "^0.12.7"
     }
 }
